--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </noscript>
 
 <div id="root"></div>
+<div id="permission-prompt"></div>
 <script type="module" src="/src/main.jsx"></script>
 </body>
 </html>
